# hiba

./: .gitignore  AUTHORS  CA.md  INSTALL.md  LICENSE  Makefile.am  PROTOCOL.authorizations  PROTOCOL.extensions  PROTOCOL.grl  README.md  autogen.sh  bootstrap.sh  certificates.c  certificates.h  checks.c  checks.h  config.h.in  configure.ac  errors.c  errors.h  extensions.c  extensions.h  hiba-ca.sh  hiba-ca.sh.1  hiba-chk.1  hiba-chk.c  hiba-gen.1  hiba-gen.c  hiba-grl.1  hiba-grl.c  hiba.h  revocations.c  revocations.h  util.c  util.h
testdata/: generate-test-certs.c  regression-test.sh  setup-local.sh  test-utils.sh
